docs/0.0.0.0/_sources/gallery/tabulated/plot_silver.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/tabulated/plot_silver.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_tabulated_plot_silver.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_tabulated_plot_silver.py:


Plot the Refractive Index of Optical Material: Silver
=====================================================

This module demonstrates the usage of the PyOptik library to calculate and plot the refractive index of the optical material silver over a specified range of wavelengths.

.. GENERATED FROM PYTHON SOURCE LINES 10-23



.. image-sg:: /gallery/tabulated/images/sphx_glr_plot_silver_001.png
   :alt: Refractive Index and Absorption vs. Wavelength [silver]
   :srcset: /gallery/tabulated/images/sphx_glr_plot_silver_001.png
   :class: sphx-glr-single-img





.. code-block:: Python

    import numpy
    from TypedUnit import ureg

    from PyOptik import MaterialBank

    # Initialize the material with the Sellmeier model
    material = MaterialBank.silver

    # Calculate refractive index at specific wavelengths
    RI = material.compute_refractive_index(wavelength=[1310, 1550] * ureg.nanometer)

    # Display calculated refractive indices at sample wavelengths
    material.plot()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.369 seconds)


.. _sphx_glr_download_gallery_tabulated_plot_silver.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_silver.ipynb <plot_silver.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_silver.py <plot_silver.py>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
